// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render 1`] = `
<div>
  <div>
    <table
      class="table"
    >
      <thead
        class="table-head"
      >
        <tr />
      </thead>
      <tbody
        class="table-body"
      />
    </table>
  </div>
</div>
`;

exports[`Table should render columns 1`] = `
<div>
  <div>
    <table
      class="table"
    >
      <thead
        class="table-head"
      >
        <tr>
          <th
            class="table-head-cell"
          >
            Name
             
          </th>
          <th
            class="table-head-cell"
          >
            Priority
             
          </th>
        </tr>
      </thead>
      <tbody
        class="table-body"
      />
    </table>
  </div>
</div>
`;

exports[`Table should render data 1`] = `
<div>
  <div>
    <table
      class="table"
    >
      <thead
        class="table-head"
      >
        <tr>
          <th
            class="table-head-cell"
          >
            Name
             
          </th>
          <th
            class="table-head-cell"
          >
            Priority
             
          </th>
        </tr>
      </thead>
      <tbody
        class="table-body"
      >
        <tr
          class="table-body-row"
        >
          <td
            class="table-body-row-cell"
          >
            name1
          </td>
          <td
            class="table-body-row-cell"
          >
            priority1
          </td>
        </tr>
        <tr
          class="table-body-row"
        >
          <td
            class="table-body-row-cell"
          >
            name2
          </td>
          <td
            class="table-body-row-cell"
          >
            priority2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render data with render function 1`] = `
<div>
  <div>
    <table
      class="table"
    >
      <thead
        class="table-head"
      >
        <tr>
          <th
            class="table-head-cell"
          >
            Name
             
          </th>
          <th
            class="table-head-cell"
          >
            Priority
             
          </th>
        </tr>
      </thead>
      <tbody
        class="table-body"
      >
        <tr
          class="table-body-row"
        >
          <td
            class="table-body-row-cell"
          >
            name1
          </td>
          <td
            class="table-body-row-cell"
          >
            <div>
              priority1
            </div>
          </td>
        </tr>
        <tr
          class="table-body-row"
        >
          <td
            class="table-body-row-cell"
          >
            name2
          </td>
          <td
            class="table-body-row-cell"
          >
            <div>
              priority2
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
